Актуализировал тесты под  изменный параметр Examination